--- a/yovip.core/yovip.core.csproj
+++ b/yovip.core/yovip.core.csproj
@@ -34,11 +34,23 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\org.joey.common\org.joey.common\bin\Debug\Autofac.dll</HintPath>
     </Reference>
+    <Reference Include="Google.Protobuf, Version=3.5.1.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
+      <HintPath>..\packages\Google.Protobuf.3.5.1\lib\net45\Google.Protobuf.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\EnterpriseLibrary.Common.6.0.1304.0\lib\NET45\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Data, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\EnterpriseLibrary.Data.6.0.1304.0\lib\NET45\Microsoft.Practices.EnterpriseLibrary.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.ExceptionHandling, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\EnterpriseLibrary.ExceptionHandling.6.0.1304.0\lib\NET45\Microsoft.Practices.EnterpriseLibrary.ExceptionHandling.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\EnterpriseLibrary.Logging.6.0.1304.0\lib\NET45\Microsoft.Practices.EnterpriseLibrary.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="MySql.Data, Version=8.0.11.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.8.0.11\lib\net452\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -48,9 +60,16 @@
       <HintPath>..\..\org.joey.common\org.joey.common\bin\Debug\org.joey.common.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Drawing.Design" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -66,22 +85,29 @@
     <Compile Include="Contracts\Models\WeChat\IWeChatAuthorization.cs" />
     <Compile Include="Contracts\Models\WeChat\IWeChatLoginUser.cs" />
     <Compile Include="Contracts\Services\IWeChatSessionService.cs" />
-    <Compile Include="DBHelper\Extension\DatabaseExtension.cs" />
-    <Compile Include="Enums\CardType.cs" />
+    <Compile Include="Database\Extension\DatabaseExtension.cs" />
+    <Compile Include="Database\Models\MySQLDataEntity.cs" />
+    <Compile Include="Enums\DealingTypes.cs" />
+    <Compile Include="Models\Entities\Deal.cs" />
+    <Compile Include="Models\Entities\MemberAssetsCard.cs" />
+    <Compile Include="Models\Entities\MemberAssetsCoupon.cs" />
+    <Compile Include="Models\Entities\Membership.cs" />
+    <Compile Include="Models\Entities\Shop.cs" />
+    <Compile Include="Models\Entities\ShopAdmin.cs" />
+    <Compile Include="Models\Entities\ShopAssets.cs" />
     <Compile Include="Models\WeChat\Miniprogram.cs" />
     <Compile Include="Models\WeChat\WeChatAuthorization.cs" />
     <Compile Include="Models\WeChat\WeChatLoginUser.cs" />
     <Compile Include="Models\WeChat\WeChatSession.cs" />
     <Compile Include="Models\WeChat\WeChatUser.cs" />
-    <Compile Include="DBHelper\Models\MSSqlDataEntity.cs" />
+    <Compile Include="Database\Models\MSSqlDataEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\WeChatSessionService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\Entities\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
