[Manny]Add datd flow to write data

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,4 @@
 /databases/yoip.data/yoip.data.dbmdl
 /test/yo.core.service.test/bin/Debug
 /test/yo.core.service.test/obj/Debug
+/test/StreamWriteTest/bin/Debug
