--- a/portals/yovip.api/Web.config
+++ b/portals/yovip.api/Web.config
@@ -13,16 +13,14 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  <dataConfiguration defaultDatabase="yovip"/>
+  <dataConfiguration defaultDatabase="yovip" />
   <connectionStrings>
-    <add  name="yovip" connectionString="server=127.0.0.1;database=rightsys;uid=root;pwd=1234;"     providerName="MySql.Data.MySqlClient"/>
+    <add name="yovip" connectionString="server=127.0.0.1;database=rightsys;uid=root;pwd=1234;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
-      <remove invariant="MySql.Data.MySqlClient"/>
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient"
-      description=".Net Framework Data Provider for MySQL"
-      type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=8.0.11.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=8.0.11.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
   </system.data>
   <system.web>
