--- a/yovip.core/yovip.core.csproj
+++ b/yovip.core/yovip.core.csproj
@@ -69,6 +69,10 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Threading.Tasks.Dataflow, Version=4.5.24.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Tpl.Dataflow.4.5.24\lib\portable-net45+win8+wpa81\System.Threading.Tasks.Dataflow.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -81,9 +85,13 @@
     <Compile Include="Common\Util\AESUtil.cs" />
     <Compile Include="Common\Util\Guard.cs" />
     <Compile Include="Common\Util\VipUtil.cs" />
+    <Compile Include="Contracts\Models\IDataEntity.cs" />
     <Compile Include="Contracts\Models\WeChat\IMiniprogram.cs" />
     <Compile Include="Contracts\Models\WeChat\IWeChatAuthorization.cs" />
     <Compile Include="Contracts\Models\WeChat\IWeChatLoginUser.cs" />
+    <Compile Include="Contracts\Services\IDataWriteDirectlyService.cs" />
+    <Compile Include="Contracts\Services\IDataWriteStreamService.cs" />
+    <Compile Include="Contracts\Services\IDataWritter.cs" />
     <Compile Include="Contracts\Services\IWeChatSessionService.cs" />
     <Compile Include="Database\Extension\DatabaseExtension.cs" />
     <Compile Include="Database\Models\MySQLDataEntity.cs" />
@@ -100,8 +108,11 @@
     <Compile Include="Models\WeChat\WeChatLoginUser.cs" />
     <Compile Include="Models\WeChat\WeChatSession.cs" />
     <Compile Include="Models\WeChat\WeChatUser.cs" />
-    <Compile Include="Database\Models\MSSqlDataEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\DataWriteStream\BatchProcessor.cs" />
+    <Compile Include="Service\DataWriteStream\DataWriteDirectlyService.cs" />
+    <Compile Include="Service\DataWriteStream\DataWriteStreamService.cs" />
+    <Compile Include="Service\DataWriteStream\ShopDataWriter.cs" />
     <Compile Include="Service\WeChatSessionService.cs" />
   </ItemGroup>
   <ItemGroup>
