--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,4 @@
 /test/yo.core.service.test/bin/Debug
 /test/yo.core.service.test/obj/Debug
 /test/StreamWriteTest/bin/Debug
+/test/StreamWriteTest/obj/Debug
