--- a/test/StreamWriteTest/packages.config
+++ b/test/StreamWriteTest/packages.config
@@ -4,4 +4,5 @@
   <package id="EnterpriseLibrary.Data" version="6.0.1304.0" targetFramework="net452" />
   <package id="Google.Protobuf" version="3.5.1" targetFramework="net452" />
   <package id="MySql.Data" version="8.0.11" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
 </packages>
