--- a/yoip.core.services/yoip.core.services.csproj
+++ b/yoip.core.services/yoip.core.services.csproj
@@ -89,6 +89,7 @@
     <Compile Include="DataWritter\ShopDataWriter.cs" />
     <Compile Include="Services\WeChatSessionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\WxApiService.cs" />
     <Compile Include="Strings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
